Use fixed qt_add_resource BASE argument
Task-number: QTBUG-86726
Change-Id: I33ec2a73254d9b44de83f4f5491f372b4bb9959b
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/examples/webengine/recipebrowser/CMakeLists.txt
+++ b/examples/webengine/recipebrowser/CMakeLists.txt
@@ -99,26 +99,26 @@ set_source_files_properties("resources/qml/main.qml"
     PROPERTIES QT_SKIP_QUICKCOMPILER 1
 )
 set(resources_resource_files
-    "pages/assets/3rdparty/markdown.css"
-    "pages/assets/3rdparty/marked.js"
-    "pages/assets/custom.css"
-    "pages/assets/custom.js"
-    "pages/burger.html"
-    "pages/cupcakes.html"
-    "pages/images/burger.jpg"
-    "pages/images/cupcakes.jpg"
-    "pages/images/pasta.jpg"
-    "pages/images/pizza.jpg"
-    "pages/images/skewers.jpg"
-    "pages/images/soup.jpg"
-    "pages/images/steak.jpg"
-    "pages/pasta.html"
-    "pages/pizza.html"
-    "pages/skewers.html"
-    "pages/soup.html"
-    "pages/steak.html"
-    "qml/RecipeList.qml"
-    "qml/main.qml"
+    "resources/pages/assets/3rdparty/markdown.css"
+    "resources/pages/assets/3rdparty/marked.js"
+    "resources/pages/assets/custom.css"
+    "resources/pages/assets/custom.js"
+    "resources/pages/burger.html"
+    "resources/pages/cupcakes.html"
+    "resources/pages/images/burger.jpg"
+    "resources/pages/images/cupcakes.jpg"
+    "resources/pages/images/pasta.jpg"
+    "resources/pages/images/pizza.jpg"
+    "resources/pages/images/skewers.jpg"
+    "resources/pages/images/soup.jpg"
+    "resources/pages/images/steak.jpg"
+    "resources/pages/pasta.html"
+    "resources/pages/pizza.html"
+    "resources/pages/skewers.html"
+    "reosurces/pages/soup.html"
+    "reosurces/pages/steak.html"
+    "reosurces/qml/RecipeList.qml"
+    "reosurces/qml/main.qml"
 )
 
 qt6_add_resources(recipebrowser "resources"
