--- a/examples/webenginewidgets/spellchecker/CMakeLists.txt
+++ b/examples/webenginewidgets/spellchecker/CMakeLists.txt
@@ -34,9 +34,9 @@ target_link_libraries(spellchecker PUBLIC
 
 # Resources:
 set(spellchecker_resource_files
-    "icon.svg"
-    "index.html"
-    "style.css"
+    "data/icon.svg"
+    "data/index.html"
+    "data/style.css"
 )
 
 qt6_add_resources(spellchecker "spellchecker"
