Fix generating webrtc logging resources with cmake
Also disable webrtc logging test if extensions are disabled.

Change-Id: I49c8d4fb6049c9aed174f62f731b0f56dae490ba
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure/BUILD.root.gn.in
+++ b/src/core/configure/BUILD.root.gn.in
@@ -297,7 +297,6 @@ source_set("qtwebengine_sources") {
 
   if (enable_webrtc && enable_extensions) {
     deps += [
-      "//chrome/browser/resources/media:webrtc_logs_resources",
       "//components/upload_list",
       "//components/webrtc_logging/browser",
       "//components/webrtc_logging/common",
@@ -424,6 +423,14 @@ repack("qtwebengine_repack_resources") {
     ]
     deps += [
       "//content/browser/webrtc/resources",
+    ]
+  }
+  if (enable_webrtc && enable_extensions) {
+    sources += [
+      "$root_gen_dir/chrome/webrtc_logs_resources.pak",
+    ]
+    deps += [
+      "//chrome/browser/resources/media:webrtc_logs_resources",
     ]
   }
 }
