Move QQuickWebEngineNavigationRequest to Core
Adds navigationRequested() to QWebEnginePage and exposes more
information about navigation requests than the old
acceptNavigationRequest() method.

Change-Id: Ibb8d750bacd1060c3086ffe2c85336abd216bab0
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>

--- a/src/core/api/CMakeLists.txt
+++ b/src/core/api/CMakeLists.txt
@@ -26,6 +26,7 @@ qt_internal_add_module(WebEngineCore
         qwebenginehttprequest.cpp qwebenginehttprequest.h
         qwebengineloadrequest.cpp qwebengineloadrequest.h
         qwebenginemessagepumpscheduler.cpp qwebenginemessagepumpscheduler_p.h
+        qwebenginenavigationrequest.cpp qwebenginenavigationrequest.h
         qwebenginenewwindowrequest.cpp qwebenginenewwindowrequest.h
         qwebenginenotification.cpp qwebenginenotification.h
         qwebenginepage.cpp qwebenginepage.h qwebenginepage_p.h
