Add spellchecker support and qwebengine_covert_dict to cmake
Add spellchecker dictionary conversion tool.
Change scope of gn object imported variables to function scope.

Pick-to: 6.2
Change-Id: Ice579a89e20b80034b675e7f767a774100478472
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/configure/BUILD.root.gn.in
+++ b/src/core/configure/BUILD.root.gn.in
@@ -258,7 +258,8 @@ source_set("qtwebengine_sources") {
   if (enable_spellcheck) {
     deps += [
       ":qtwebengine_spellcheck_sources",
-      "//chrome/tools/convert_dict",
+      "//chrome/tools/convert_dict:lib",
+      "//third_party/hunspell",
     ]
   }
   if (enable_plugins) {
@@ -528,5 +529,18 @@ if (enable_extensions) {
       "//chrome/common/extensions/api:extensions_features",
       "//extensions/common/api:extensions_features",
   ]
+  }
+}
+
+if (enable_spellcheck) {
+  shared_library("convert_dict") {
+    cmake_config = "@GN_CONFIG@"
+    configs += [ "//build/config/compiler:wexit_time_destructors" ]
+    deps = [
+      "//chrome/tools/convert_dict:lib",
+      "//base",
+      "//base:i18n",
+      "//third_party/hunspell",
+    ]
   }
 }
