--- a/tests/auto/widgets/CMakeLists.txt
+++ b/tests/auto/widgets/CMakeLists.txt
@@ -32,5 +32,5 @@ if(QT_FEATURE_ssl)
     add_subdirectory(certificateerror)
 endif()
 if(QT_FEATURE_webengine_spellchecker AND NOT CMAKE_CROSSCOMPILING AND NOT QT_FEATURE_webengine_native_spellchecker)
-#    add_subdirectory(spellchecking)
+    add_subdirectory(spellchecking)
 endif()
