--- a/examples/webenginewidgets/spellchecker/CMakeLists.txt
+++ b/examples/webenginewidgets/spellchecker/CMakeLists.txt
@@ -53,3 +53,37 @@ install(TARGETS spellchecker
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
 )
+
+file(GLOB_RECURSE dicts
+    RELATIVE ${CMAKE_CURRENT_LIST_DIR}/dict
+    */*.dic
+)
+
+if(QT_GENERATOR_IS_MULTI_CONFIG)
+    set(spellcheckerDir ${CMAKE_CURRENT_BINARY_DIR}/dict/qtwebengine_dictionaries)
+else()
+    set(spellcheckerDir ${CMAKE_CURRENT_BINARY_DIR}/qtwebengine_dictionaries)
+endif()
+
+foreach(dictFile ${dicts})
+    get_filename_component(dictName ${dictFile} NAME_WE)
+    add_custom_command(TARGET spellchecker
+        PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${spellcheckerDir}
+        COMMAND $<TARGET_FILE:${QT_CMAKE_EXPORT_NAMESPACE}::qwebengine_convert_dict>
+        ${CMAKE_CURRENT_SOURCE_DIR}/dict/${dictFile}
+        ${spellcheckerDir}/${dictName}.bdic
+        COMMENT "Running qwebengine_convert_dict"
+    )
+endforeach()
+
+# copy dictionaries to $<CONFIG> build dir
+if(QT_GENERATOR_IS_MULTI_CONFIG)
+    add_custom_command(TARGET spellchecker
+       POST_BUILD
+       COMMAND ${CMAKE_COMMAND} -E echo Copying dictionares
+       COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/dict
+       ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>
+    )
+endif()
+
