Drop printsupport dependency from core
Prevent linkage of core to widgets by moving printing API from
QWebEnginePage to View and using QPagedPaintDevice (the QtGui ancestor
of QPrinter) where it's needed.

Change-Id: I6ea96edb495b0dcaaa584bbe72632fda025c18d3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/webenginewidgets/CMakeLists.txt
+++ b/src/webenginewidgets/CMakeLists.txt
@@ -29,3 +29,8 @@ qt_internal_add_module(WebEngineWidgets
         Qt::WebEngineCore
 )
 make_install_only(WebEngineWidgets)
+
+qt_internal_extend_target(WebEngineWidgets CONDITION QT_FEATURE_webengine_printing_and_pdf
+    PUBLIC_LIBRARIES
+        Qt::PrintSupport
+)
