--- a/src/webenginequick/plugin/CMakeLists.txt
+++ b/src/webenginequick/plugin/CMakeLists.txt
@@ -1,8 +1,12 @@
 qt_internal_add_qml_module(qtwebengineplugin
     URI "QtWebEngine"
     VERSION "${PROJECT_VERSION}"
-    CLASSNAME QtWebEnginePlugin
-    SKIP_TYPE_REGISTRATION
+    CLASS_NAME QtWebEnginePlugin
+    PLUGIN_TARGET qtwebengineplugin
+    NO_PLUGIN_OPTIONAL
+    NO_GENERATE_PLUGIN_SOURCE
+    NO_GENERATE_QMLTYPES
+    INSTALL_SOURCE_QMLTYPES "plugins.qmltypes"
     SOURCES
         plugin.cpp
     LIBRARIES
