Replace calls to obsolete cmake functions with modern alternative
Change-Id: I5674d887a73a6a693d1babc416470c9873491eb3
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/tests/auto/core/qwebengineclientcertificatestore/CMakeLists.txt
+++ b/tests/auto/core/qwebengineclientcertificatestore/CMakeLists.txt
@@ -12,7 +12,7 @@ set(tst_qwebengineclientcertificatestore_resource_files
     "resources/privatekey1.key"
 )
 
-qt_add_resource(tst_qwebengineclientcertificatestore "tst_qwebengineclientcertificatestore"
+qt_internal_add_resource(tst_qwebengineclientcertificatestore "tst_qwebengineclientcertificatestore"
     PREFIX
         "/"
     FILES
