--- a/src/webenginequick/testsupport/CMakeLists.txt
+++ b/src/webenginequick/testsupport/CMakeLists.txt
@@ -1,17 +1,19 @@
-qt_internal_add_qml_module(qtwebenginetestsupportplugin
+qt_internal_add_qml_module(WebEngineTestSupport
+    ${configureMode}
     URI "QtWebEngine.testsupport"
     VERSION "${PROJECT_VERSION}"
     CLASS_NAME QtWebEngineTestSupportPlugin
     PLUGIN_TARGET qtwebenginetestsupportplugin
-    NO_GENERATE_PLUGIN_SOURCE
     NO_PLUGIN_OPTIONAL
-    NO_GENERATE_QMLTYPES
-    INSTALL_SOURCE_QMLTYPES "plugins.qmltypes"
     SOURCES
-        plugin.cpp
+        qquickwebenginetestsupport.cpp qquickwebenginetestsupport_p.h
+    DEFINES
+        QT_BUILD_WEBENGINEQUICK_TESTSUPPORT_LIB
     LIBRARIES
         Qt::GuiPrivate
         Qt::Qml
-        Qt::WebEngineQuickPrivate
+        Qt::TestPrivate
+        Qt::WebEngineCore
 )
+make_install_only(WebEngineTestSupport)
 make_install_only(qtwebenginetestsupportplugin)
