Implement dialogs of File System Access API
Dialogs triggered by window.showOpenFilePicker() or
window.showDirectoryPicker() needed different implementation than
regular file picker dialogs. Since the end-users can't distinguish
between HTML file picker dialogs and these file system access dialogs,
we can just use the existing file picker WebEngine API and UI delegates.

Task-number: QTBUG-92519
Pick-to: 6.2
Change-Id: Ib1624f80603c4042803303274ba45d864ecb371c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -154,6 +154,7 @@ foreach(config ${configs})
             request_controller.h
             resource_bundle_qt.cpp
             resource_context_qt.cpp resource_context_qt.h
+            select_file_dialog_factory_qt.cpp select_file_dialog_factory_qt.h
             touch_handle_drawable_client.h
             touch_handle_drawable_qt.cpp touch_handle_drawable_qt.h
             touch_selection_controller_client_qt.cpp touch_selection_controller_client_qt.h
