Remove QRC->file special case
It was marked as to be removed for Qt6

Pick-to: 6.2
Change-Id: I059c450aa6e5cad6d48ecdd2667abff21217d7e0
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>

--- a/tests/auto/core/origins/CMakeLists.txt
+++ b/tests/auto/core/origins/CMakeLists.txt
@@ -28,6 +28,7 @@ set(tst_origins_resource_files
     "resources/subdir_frame1.html"
     "resources/viewSource.html"
     "resources/websocket.html"
+    "resources/websocket2.html"
 )
 
 qt_internal_add_resource(tst_origins "tst_origins"
