Update customdialogs example to work with Quick Controls 2
Task-number: QTBUG-93666
Pick-to: 6.2
Change-Id: I3716454d7a0560f58a0e2da363b1d053babe824b
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/examples/webengine/customdialogs/CMakeLists.txt
+++ b/examples/webengine/customdialogs/CMakeLists.txt
@@ -39,10 +39,10 @@ set(customdialogs_resource_files
     "WebView.qml"
     "forms/Authentication.qml"
     "forms/AuthenticationForm.ui.qml"
-    "forms/Button.qml"
     "forms/ColorCell.qml"
     "forms/ColorPicker.qml"
     "forms/ColorPickerForm.ui.qml"
+    "forms/CustomButton.qml"
     "forms/FilePicker.qml"
     "forms/FilePickerForm.ui.qml"
     "forms/FileRow.qml"
