Remove Quick Controls 1 UIDelegates and introduce UIDelegates test
- Renamed Controls2Delegates to ControlsDelegates
- Removed option to use Quick Controls 1 delegates
- Added test to check if controls are shown

Task-number: QTBUG-93666
Change-Id: Iccca948615309285db7fc57d14fb1cdcdef28051
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>

--- a/src/webenginequick/CMakeLists.txt
+++ b/src/webenginequick/CMakeLists.txt
@@ -7,7 +7,7 @@ get_configure_mode(configureMode)
 if(QT_FEATURE_webenginequick_testsupport)
     add_subdirectory(testsupport)
 endif()
-add_subdirectory(ui2)
+add_subdirectory(ui)
 
 qt_internal_add_qml_module(WebEngineQuick
     ${configureMode}
