--- a/tests/auto/quick/CMakeLists.txt
+++ b/tests/auto/quick/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(dialogs)
 add_subdirectory(publicapi)
 add_subdirectory(qquickwebenginedefaultsurfaceformat)
 add_subdirectory(qtbug-70248)
+add_subdirectory(uidelegates)
 if(NOT boot2qt)
     add_subdirectory(inspectorserver)
     add_subdirectory(qmltests)
