--- a/tests/auto/quick/CMakeLists.txt
+++ b/tests/auto/quick/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(qtbug-70248)
 add_subdirectory(inspectorserver)
 add_subdirectory(qmltests)
 add_subdirectory(qquickwebengineview)
+add_subdirectory(uidelegates)
 if(QT_FEATURE_webenginequick_testsupport)
     add_subdirectory(qquickwebengineviewgraphics)
 endif()
