Pass compiler wrapper to GN
Pick-to: 6.2
Change-Id: I1ce6e9d0e03bb780f85636865e15552ac28876fa
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,12 @@ list(APPEND libsCmakeArgs
         "-DWEBENGINE_REPO_BUILD=TRUE"
         "${featureList}"
 )
+if (CMAKE_C_COMPILER_LAUNCHER)
+    list(APPEND libsCmakeArgs "-DCMAKE_C_COMPILER_LAUNCHER=${CMAKE_C_COMPILER_LAUNCHER}")
+endif()
+if (CMAKE_CXX_COMPILER_LAUNCHER)
+    list(APPEND libsCmakeArgs "-DCMAKE_CXX_COMPILER_LAUNCHER=${CMAKE_CXX_COMPILER_LAUNCHER}")
+endif()
 
 if(LINUX)
     set(cmd "${CMAKE_COMMAND} --build ${CMAKE_CURRENT_BINARY_DIR}/src")
