Add implicit dependencies in case of topLevel build
Pick-to: 6.2
Change-Id: Ic7a4096d06b05a62a01565d6e7aceac12dc73def
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,11 @@ externalproject_add(libs
     COMMAND ${CMAKE_COMMAND} -E remove_directory ../mkspecs
 )
 
+# required for topLevel build
+add_implicit_dependencies(libs Core Gui Widgets Network OpenGL
+    OpenGLWidgets Quick QuickWidgets Qml PrintSupport WebChannel Positioning
+)
+
 # Ensure the libs project is reconfigured if the root project is reconfigured, so that the
 # correct CMake and qmake support files are used when building examples, rather than
 # using the incomplete support files created by the root project.
