Support more module flags for 'configure' script
Support flags passed to main 'configure' and separate
'qt-configure-module' scripts with flags like '-no-build-qtpdf',
'-webengine-full-debug-info', '-no-webengine-jumbo-build', etc.

Fixes: QTBUG-95717
Pick-to: 6.2 6.2.0
Change-Id: Ia12602e9a9b31f4f2256f983f6c1e3fbe50cb9e3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/pdf/CMakeLists.txt
+++ b/src/pdf/CMakeLists.txt
@@ -100,6 +100,7 @@ foreach(arch ${archs})
         list(APPEND gnArgArg
           qtwebengine_target="${buildDir}/${config}/${arch}:QtPdf"
           enable_remoting=false
+          enable_resource_allowlist_generation=false
           enable_web_speech=false
           chrome_pgo_phase=0
         )
